--- a/src/components/Evolve/Evolve.module.scss
+++ b/src/components/Evolve/Evolve.module.scss
@@ -2,4 +2,8 @@
   border-top-left-radius: unset !important;
   border-bottom-left-radius: unset !important;
   margin-right: 0 !important;
+
+  @media (max-width: 550px) {
+    padding: 0.5em !important;
+  }
 }
